--- a/application/qmxz/view/special_warehouse/index.html
+++ b/application/qmxz/view/special_warehouse/index.html
@@ -66,7 +66,7 @@
             <th class='text-left nowrap'>主键</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
-            <th class='text-left nowrap'>图标展示</th>
+            <!-- <th class='text-left nowrap'>图标展示</th> -->
             <!-- <th class='text-left nowrap'>图标地址</th> -->
             <th class='text-left nowrap'>轮播图</th>
             <th class='text-left nowrap'>奖品</th>
@@ -96,9 +96,9 @@
             <td class='text-left nowrap'>
                 {$vo.des}
             </td>
-            <td class='text-left nowrap'>
+            <!-- <td class='text-left nowrap'>
                 <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
-            </td>
+            </td> -->
             <!-- <td class='text-left nowrap'>
                 {$vo.img}
             </td> -->
